commit translated contents

--- a/articles/azure-percept/index.yml
+++ b/articles/azure-percept/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: mimcco
   ms.author: mimcco
   ms.date: 03/25/2021
-  ms.openlocfilehash: 1a18b819a96f8f84fb7d8e96b61f0b2d9f33709a
-  ms.sourcegitcommit: 17345cc21e7b14e3e31cbf920f191875bf3c5914
+  ms.openlocfilehash: 193f3a17263ff0c3f164d04fe6a6a766208dd5bc
+  ms.sourcegitcommit: b044915306a6275c2211f143aa2daf9299d0c574
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 05/19/2021
-  ms.locfileid: "110098864"
+  ms.lasthandoff: 06/29/2021
+  ms.locfileid: "113031479"
 landingContent:
 - title: Was ist Azure Percept?
   linkLists:
@@ -117,6 +117,8 @@ landingContent:
       url: overview-update-experience.md
   - linkListType: how-to-guide
     links:
+    - text: Auswählen des Updatepakets
+      url: how-to-select-update-package.md
     - text: Einrichten von OTA-Updates (Over-the-Air)
       url: how-to-set-up-over-the-air-updates.md
     - text: Aktualisieren Ihres Geräts per Funk (Over-the-Air, OTA)
