--- a/articles/azure-arc/index.yml
+++ b/articles/azure-arc/index.yml
@@ -9,7 +9,7 @@ metadata:
   ms.topic: hub-page
   author: MGoedtel
   ms.author: magoedte
-  ms.date: 03/02/2021
+  ms.date: 06/28/2021
   ms.custom: e2e-hybrid
 highlightedContent:
   items:
@@ -19,91 +19,92 @@ highlightedContent:
     - title: Schnelleinstieg
       itemType: sample
       url: 'https://azurearcjumpstart.io/overview/'
-    - title: Server mit Azure Arc-Unterstützung
+    - title: "Server mit Azure\_Arc-Unterstützung"
       itemType: overview
       url: ./servers/overview.md
-    - title: Kubernetes mit Azure Arc-Aktivierung
+    - title: Azure Arc-fähiges Kubernetes
       itemType: overview
       url: ./kubernetes/overview.md
-    - title: "Azure\_Arc-fähige Datendienste (Vorschauversion)"
+    - title: "Datendienste mit Azure\_Arc-Unterstützung (Vorschauversion)"
       itemType: overview
       url: ./data/overview.md
-    - title: "Azure\_Arc-fähige SQL-Server-Instanz (Vorschauversion)"
+    - title: SQL Server auf Azure Arc-fähigen Servern (Vorschau)
       itemType: overview
       url: /sql/sql-server/azure-arc/overview
-productDirectory:
-  title: Dienste mit Azure Arc-Unterstützung
-  summary: Hier erfahren Sie mehr über die globale Ausführung von Diensten.
-  items:
-    - title: Server mit Azure Arc-Unterstützung
-      imageSrc: ./media/manage-450-machines-azure-arc.svg
-      links:
-        - url: ./servers/onboard-portal.md
-          text: Verbinden von Computern mit Azure Arc über das Azure-Portal
-        - url: ./servers/onboard-service-principal.md
-          text: Verbinden von Computern im großen Stil mithilfe eines Dienstprinzipals
-        - url: ./servers/onboard-dsc.md
-          text: Verbinden von Computern mit Azure mithilfe von PowerShell DSC
-        - url: ./servers/index.yml
-          text: Mehr anzeigen...
-    - title: Kubernetes mit Azure Arc-Aktivierung
-      imageSrc: ./media/01088-icon-arc-kubernetes-menu.svg
-      links:
-        - url: ./kubernetes/quickstart-connect-cluster.md
-          text: Herstellen einer Clusterverbindung
-        - url: ./kubernetes/tutorial-use-gitops-connected-cluster.md
-          text: Bereitstellen von Konfigurationen mithilfe von GitOps
-        - url: ./kubernetes/index.yml
-          text: Mehr anzeigen...
-    - title: "Azure\_Arc-fähige Datendienste (Vorschauversion)"
-      imageSrc: ./media/manage-756-azure-arc.svg
-      links:
-        - url: ./data/install-client-tools.md
-          text: Installieren von Tools
-        - url: ./data/create-sql-managed-instance.md
-          text: Erstellen einer verwalteten SQL-Instanz
-        - url: ./data/create-postgresql-hyperscale-server-group.md
-          text: Erstellen von PostgreSQL Hyperscale
-        - url: ./data/index.yml
-          text: Mehr anzeigen...
-    - title: "Azure\_Arc-fähige SQL-Server-Instanz (Vorschauversion)"
-      imageSrc: ./media/01850-icon-arc-sql-server-menu.svg
-      links:
-        - url: /sql/sql-server/azure-arc/assess
-          text: Bewerten Ihrer SQL-Instanzen
-        - url: /sql/sql-server/azure-arc/overview
-          text: Mehr anzeigen...
 conceptualContent:
-  title: Erste Schritte
   items:
-    - title: Server mit Azure Arc-Unterstützung
+    - title: "Server mit Azure\_Arc-Unterstützung"
       links:
         - url: ./servers/learn/quick-enable-hybrid-vm.md
-          itemType: get-started
-          text: Server-Agents mit Azure Arc-Unterstützung
-        - url: ./servers/learn/tutorial-enable-vm-insights.md
-          itemType: tutorial
-          text: Überwachen eines Hybridcomputers mit Azure Monitor für VMs
+          itemType: quickstart
+          text: Verbinden von Hybridcomputern
+        - url: ./servers/security-overview.md
+          itemType: concept
+          text: Sicherheitsübersicht
         - url: ./servers/policy-reference.md
           itemType: learn
           text: Zugangskontrollrichtlinien mit Azure Policy
-        - url: ./servers/manage-vm-extensions.md
-          itemType: how-to-guide
-          text: Verwalten und Verwenden von Azure-VM-Erweiterungen
-    - title: Kubernetes mit Azure Arc-Aktivierung
+        - url: /sql/sql-server/azure-arc/overview
+          itemType: overview
+          text: "Aktivieren einer SQL\_Server-Instanz mit Azure\_Arc-Unterstützung (Vorschauversion)"
+      footerLink:
+        url: ./servers/index.yml
+        text: Weitere Informationen
+    - title: Azure Arc-fähiges Kubernetes
       links:
-        - url: ./kubernetes/use-gitops-with-helm.md
-          itemType: deploy
-          text: Bereitstellen von Helm-Charts mithilfe von GitOps
+        - url: ./kubernetes/quickstart-connect-cluster.md
+          itemType: quickstart
+          text: Verbinden eines Clusters mit Azure Arc
+        - url: ../azure-monitor/containers/container-insights-enable-arc-enabled-clusters.md
+          itemType: tutorial
+          text: Überwachen mithilfe von Azure Monitor für Container
         - url: ./kubernetes/use-azure-policy.md
           itemType: how-to-guide
           text: Erzwingen von GitOps mithilfe von Azure Policy
-        - url: ../azure-monitor/containers/container-insights-enable-arc-enabled-clusters.md?toc=%2fazure%2fazure-arc%2ftoc.json
+        - url: ./kubernetes/tutorial-arc-enabled-open-service-mesh.md
           itemType: tutorial
-          text: Überwachen mithilfe von Azure Monitor für Container
-        - url: ../governance/policy/concepts/policy-for-kubernetes.md?toc=/azure/azure-arc/toc.json
-          itemType: learn
-          text: Zugangskontrollrichtlinien mit Azure Policy
-        - url: ./kubernetes/deploy-azure-iot-edge-workloads.md
+          text: "Open Service Mesh mit Azure\_Arc-Unterstützung (Vorschauversion)"
+      footerLink:
+        url: ./kubernetes/index.yml
+        text: Weitere Informationen
+    - title: "Datendienste mit Azure\_Arc-Unterstützung (Vorschauversion)"
+      links:
+        - url: ./data/install-client-tools.md
           itemType: deploy
-          text: "Bereitstellen von Azure\_IoT\_Edge-Workloads"
+          text: Installieren von Tools
+        - url: ./data/create-sql-managed-instance.md
+          itemType: how-to-guide
+          text: Erstellen einer verwalteten SQL-Instanz
+        - url: ./data/create-postgresql-hyperscale-server-group.md
+          itemType: how-to-guide
+          text: Erstellen von PostgreSQL Hyperscale
+        - url: ./data/index.yml
+          itemType: get-started
+          text: Mehr anzeigen...
+    - title: Anwendungsdienste
+      links:
+        - url: ../app-service/overview-arc-integration.md
+          itemType: overview
+          text: 'App Service, Funktionen und Logic Apps in Azure Arc (Vorschau)'
+    - title: "Verwaltungsdienste mit Azure\_Arc-Unterstützung"
+      links:
+        - url: ../azure-monitor/overview.md?
+          itemType: overview
+          text: Azure Monitor – Übersicht
+        - url: ../governance/policy/overview.md
+          itemType: overview
+          text: Azure Policy – Übersicht
+        - url: ../security-center/azure-defender.md
+          itemType: overview
+          text: Übersicht über Azure Defender
+        - url: ../automation/automation-intro.md
+          itemType: overview
+          text: Azure Automation – Übersicht
+    - title: SQL Server auf Azure Arc-fähigen Servern (Vorschau)
+      links:
+        - url: /sql/sql-server/azure-arc/assess
+          itemType: how-to-guide
+          text: Bewerten einer Instanz mit Arc-Unterstützung
+        - url: /sql/sql-server/azure-arc/configure-advanced-data-security
+          itemType: how-to-guide
+          text: Konfigurieren von Advanced Data Security
