--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -128,6 +128,8 @@
               href: event-schema-container-registry.md
             - name: Azure Event Hubs
               href: event-schema-event-hubs.md
+            - name: Azure FarmBeats
+              href: event-schema-farmbeats.md
             - name: Azure IoT Hub
               href: event-schema-iot-hub.md
             - name: Azure-Schlüsseltresor
@@ -270,8 +272,6 @@
           href: move-custom-topics-across-regions.md
         - name: Regionsübergreifendes Verschieben von Domänen
           href: move-domains-across-regions.md
-        - name: Regionsübergreifendes Verschieben von Partnernamespaces
-          href: move-partner-namespaces-across-regions.md
     - name: Sicher
       items:
         - name: Sicheres Veröffentlichen von Ereignissen über eine private Verbindung
@@ -286,6 +286,8 @@
               href: add-identity-roles.md
             - name: 'Erstellen eines Ereignisabonnements, von dem die verwaltete Identität verwendet wird'
               href: managed-service-identity.md
+        - name: Erzwingen von Sicherheitskontrollen mit benutzerdefinierten Azure-Richtlinien
+          href: custom-azure-policies-for-security-control.md
         - name: Übermitteln von Ereignissen über eine private Verbindung
           href: consume-private-endpoints.md
         - name: Konfigurieren der IP-Firewall
