--- a/articles/storage/solution-integration/TOC.yml
+++ b/articles/storage/solution-integration/TOC.yml
@@ -31,6 +31,8 @@
       href: ./validated-partners/data-management/dobimigrate-quick-start-guide.md
     - name: Leitfaden zu den ersten Schritten mit Komprise
       href: ./validated-partners/data-management/komprise-quick-start-guide.md
+    - name: Leitfaden zu den ersten Schritten mit StorageX
+      href: ./validated-partners/data-management/storagex-quick-start-guide.md
   expanded: false
 - name: Partner für primären und sekundären Speicher
   items:
