--- a/articles/storage/solution-integration/index.yml
+++ b/articles/storage/solution-integration/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: beber-msft
   ms.author: beber
   ms.date: 03/15/2021
-  ms.openlocfilehash: 9d577f173b3f93ad5e4967b9a2bb73b55b0c8592
-  ms.sourcegitcommit: 7f59e3b79a12395d37d569c250285a15df7a1077
+  ms.openlocfilehash: 89a8004096a691965f08fe14169324021e18b5e4
+  ms.sourcegitcommit: 91fdedcb190c0753180be8dc7db4b1d6da9854a1
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 06/02/2021
-  ms.locfileid: "110794714"
+  ms.lasthandoff: 06/17/2021
+  ms.locfileid: "112287441"
 landingContent:
 - title: Partner für Analysen und Big Data
   linkLists:
@@ -59,6 +59,8 @@ landingContent:
       url: ./validated-partners/data-management/dobimigrate-quick-start-guide.md
     - text: Leitfaden zu den ersten Schritten mit Komprise
       url: ./validated-partners/data-management/komprise-quick-start-guide.md
+    - text: Leitfaden zu den ersten Schritten mit StorageX
+      url: ./validated-partners/data-management/storagex-quick-start-guide.md
 - title: Partner für primären und sekundären Speicher
   linkLists:
   - linkListType: overview
